--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">地震Twitter</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_main">MainActivity</string>
+    <string name="twitter_consumer_key">nFX5wjly7k4iIaoYeXhw4BWTV</string>
+    <string name="twitter_consumer_secret">Yfqg172uhm0dqLCbsusSqEQCn7iy1ak4098MjjLY9nQbcOgiOT</string>
 
 </resources>
