--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,9 +5,10 @@
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_main">MainActivity</string>
-    <string name="twitter_consumer_key">nFX5wjly7k4iIaoYeXhw4BWTV</string>
-    <string name="twitter_consumer_secret">Yfqg172uhm0dqLCbsusSqEQCn7iy1ak4098MjjLY9nQbcOgiOT</string>
+    <string name="twitter_consumer_key">5c3ZBNzSGNhQ7BTOESQsEeJZt</string>
+    <string name="twitter_consumer_secret">FOt0cLiM7Q6VKacp7gNE9nmTTLRqeFbu2z05DAFz1xbf8AbHgx</string>
 
-    <string name="oauth_button">Oauth</string>
+    <string name="oauth_button">OAuth</string>
+    <string name="twitter_callback_url">earth://gecko655</string>
 
 </resources>
