--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -16,5 +16,8 @@
     <string name="newTweetButton">Create New Tweet</string>
     <string name="newRetweetButton">Create New RT</string>
     
+    <string name="newTweetHint">Input New Tweet</string>
+    <string name="register">Register</string>
+    
 
 </resources>
