--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,6 +7,7 @@
     <string name="action_settings">Settings</string>
 
     <string name="action_auth">Re-authentication</string>
+    <string name="action_reload">Re-load</string>
     <string name="twitter_consumer_key">5c3ZBNzSGNhQ7BTOESQsEeJZt</string>
     <string name="twitter_consumer_secret">FOt0cLiM7Q6VKacp7gNE9nmTTLRqeFbu2z05DAFz1xbf8AbHgx</string>
 
